--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.7"
+version: "3.8"
 
 networks:
   backend:
@@ -7,17 +7,46 @@ networks:
     driver: host
 
 volumes:
-  wp-deploy-db:
-    external: true
-  wp-deploy-app:
-    external: true
+  app-source:
+  db-data:
+#  portainer-data:
 
 services:
+#  monitoring:
+#    image: portainer/portainer
+#    deploy:
+#      replicas: 1
+#      mode: replicated
+#      restart_policy:
+#        condition: any
+#    ports:
+#      - "8000:8000"
+#      - "9443:9443"
+#    volumes:
+#      - type: volume
+#        source: portainer-data
+#        target: /data
   database:
     build:
       context: ./mysql
+    deploy:
+      replicas: 1
+      mode: replicated
+      restart_policy:
+        condition: any
+      resources:
+        limits:
+          cpus: 0.5
+          memory: 50M
+        reservations:
+          cpus: 0.25
+          memory: 25M
     volumes:
-      - wp-deploy-db:/var/lib/mysql
+      - type: volume
+        source: db-data
+        target: /var/lib/mysql
+        volume:
+          nocopy: true
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
@@ -30,10 +59,35 @@ services:
   app:
     build:
       context: ./
+    deploy:
+      replicas: 2
+      mode: replicated
+      restart_policy:
+        condition: any
+        max_attempts: 3
+      resources:
+        limits:
+          cpus: 0.4
+          memory: 50M
+        reservations:
+          cpus: 0.3
+          memory: 25M
+      rollback_config:
+        parallelism: 1
+        failure_action: pause
+        order: start-first
+      update_config:
+        parallelism: 1
+        delay: 5s
+        order: start-first
     links:
       - database:mariadb
     volumes:
-      - wp-deploy-app:/bitnami/wordpress
+      - type: volume
+        source: app-source
+        target: /bitnami/wordpress
+        volume:
+          nocopy: true
     environment:
       WORDPRESS_USERNAME: ${WORDPRESS_USERNAME}
       WORDPRESS_PASSWORD: ${WORDPRESS_PASSWORD}
