--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,20 +10,6 @@ volumes:
 #  portainer-data:
 
 services:
-#  monitoring:
-#    image: portainer/portainer
-#    deploy:
-#      replicas: 1
-#      mode: replicated
-#      restart_policy:
-#        condition: any
-#    ports:
-#      - "8000:8000"
-#      - "9443:9443"
-#    volumes:
-#      - type: volume
-#        source: portainer-data
-#        target: /data
   database:
     image: ghcr.io/mike-prog-lab/wp-deploy/mysql
     deploy:
@@ -40,7 +26,7 @@ services:
           memory: 25M
     volumes:
       - type: volume
-        source: db-data
+        source: /mnt/mysql
         target: /var/lib/mysql
         volume:
           nocopy: true
@@ -80,7 +66,7 @@ services:
       - database:mariadb
     volumes:
       - type: volume
-        source: app-source
+        source: /mnt/wp-data
         target: /bitnami/wordpress
         volume:
           nocopy: true
