Added dependency for app on database.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,8 @@ services:
       - backend
   app:
     image: ghcr.io/mike-prog-lab/wp-deploy/wp-app
+    depends_on:
+      - database
     deploy:
       replicas: 2
       mode: replicated
