--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,8 +62,6 @@ services:
         parallelism: 1
         delay: 5s
         order: start-first
-    links:
-      - database:mariadb
     volumes:
       - type: bind
         source: /mnt/wp-data
@@ -71,6 +69,7 @@ services:
         volume:
           nocopy: true
     environment:
+      MARIADB_HOST: database
       WORDPRESS_USERNAME: ${WORDPRESS_USERNAME}
       WORDPRESS_PASSWORD: ${WORDPRESS_PASSWORD}
       WORDPRESS_EMAIL: ${WORDPRESS_EMAIL}
